--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,9 +58,20 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+  - images/1beef.jpg
+  - images/2chicken.webp
+  - images/3pork.webp
+  - images/4seafood.jpg
+  - images/5mains.jpg
+  - images/6salad.jpg
+  - images/7sides.webp
+  - images/8crock.jpg
+  - images/brownies.jpeg
+  - images/cookies.webp
+  - images/pie.jpeg
+  - images/icecream.jpeg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
