--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,9 @@ flutter:
   assets:
   #   - images/a_dot_burr.jpeg
       - images/algonquin.jpg
+      - images/qmark.png
+      - images/bulb.png
+      - images/stop.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
