--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  url_launcher: ^6.3.1
   flutter:
     sdk: flutter
 
@@ -38,6 +39,7 @@ dependencies:
   encrypted_shared_preferences: ^3.0.1
 
 dev_dependencies:
+
   flutter_test:
     sdk: flutter
 
